About section changed

--- a/index.html
+++ b/index.html
@@ -120,13 +120,14 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3> Hey there! </h3>
             <p class="font-weight-normal">
-              I graduated from Delhi Technological University (DTU) with a BTech degree in Software Engineering. During
-              my time at DTU, I pursued my undergraduate studies and developed a strong skillset in various areas such
-              as
-              data structure & algorithms, front-end development, Ui/Ux design, SEO and machine learning. I also have a
-              passion for photography, videography and travelling. With a
-              diverse set of technical and creative skills, I'm eager to apply my knowledge to tackle new challenges and
-              make meaningful contributions.
+              I am a passionate software engineer with a BTech in Software Engineering from Delhi Technological
+              University (DTU), where I developed strong skills in data structures, algorithms, front-end development,
+              UI/UX design, SEO and machine learning. Currently, I am working as a QA Engineer at Kounsel, where
+              I conduct quality assurance, automation testing, develop as well execute test plans and
+              collaborate with cross-functional teams to ensure high standards of code & product quality. In addition to
+              my
+              technical expertise, I have a passion for photography, videography & traveling, which fuels my
+              creativity and drive to tackle new challenges.
             </p> <br>
             <div class="row">
               <div class="col-lg-6">
@@ -412,7 +413,7 @@
                   <a href="https://www.linkedin.com/company/kingsley-engineering-service-company/" target="_blank"
                     title="LinkedIn"><i class='bx bx-link-external'></i></a>
                 </h4>
-                <h5>August 2023 - Present</h5>
+                <h5>August 2023 - July 2024</h5>
                 <p> <em>Dhaka, Bangladesh · Hybrid</em> </p>
                 <h6>Software Engineer</h6>
                 <ul>
