--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <h3> Hey there! </h3>
             <p class="font-weight-normal">
               I am a passionate software engineer with a BTech in Software Engineering from Delhi Technological
-              University (DTU), where I developed strong skills in data structures, algorithms, front-end development,
+              University (DTU), where I developed strong skills in data structures, algorithms, web development,
               UI/UX design, SEO and machine learning. Currently, I am working as a QA Engineer at Kounsel, where
               I conduct quality assurance, automation testing, develop as well execute test plans and
               collaborate with cross-functional teams to ensure high standards of code & product quality. In addition to
