updated ab pharmacy project

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap"> <img src="img/project/project9.webp" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
-                <h4>Using React Native and ReactJS</h4>
+                <h4>Using React Native Expo</h4>
                 <div class="portfolio-links">
                   <a href="https://github.com/dhruba-datta/AB-Pharmacy-Expo" target="_blank"
                     data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Link"><i
