updated resume and research interest

--- a/index.html
+++ b/index.html
@@ -152,16 +152,16 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li> <i class="icofont-rounded-right"></i> Artificial Intelligence & Machine Learning </li>
-                  <li> <i class="icofont-rounded-right"></i> Natural Language Processing </li>
                   <li> <i class="icofont-rounded-right"></i> Computer Vision </li>
+                  <li> <i class="icofont-rounded-right"></i> Artificial Intelligence (AI) </li>
+                  <!-- <li> <i class="icofont-rounded-right"></i> Computer Vision </li> -->
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li> <i class="icofont-rounded-right"></i> Cybersecurity </li>
-                  <li> <i class="icofont-rounded-right"></i> Blockchain Technology </li>
-                  <li> <i class="icofont-rounded-right"></i> Human Computer Interaction </li>
+                  <li> <i class="icofont-rounded-right"></i> Machine Learning (ML) </li>
+                  <li> <i class="icofont-rounded-right"></i> Natural Language Processing </li>
+                  <!-- <li> <i class="icofont-rounded-right"></i> Human Computer Interaction </li> -->
                 </ul>
               </div>
             </div>
@@ -396,7 +396,7 @@
                 </h4>
                 <h5>June 2024 - Present</h5>
                 <p> <em>California, United States of America · Remote</em> </p>
-                <h6>Quality Assurance Engineer</h6>
+                <h6>Software QA Engineer</h6>
 
                 <ul>
                   <li>Conducted quality assurance and automation testing using Selenium, and managed bugs with Jira to
